Fix Filter overflows on almost Tiny screens

--- a/src/Filter.scss
+++ b/src/Filter.scss
@@ -9,14 +9,27 @@
 
   /* Input Fields */
   .Inputs {
-    margin: 1rem 0 0 0;
+    margin: 1rem auto 0 auto;
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row;
     justify-content: center;
 
     /* Fix for Tiny Screens (Issue #34) */
     @media screen and (max-width: 25rem) {
       flex-flow: column;
+    }
+
+    /* Fix width of input and select are not fixed (Follow-up on #34) */
+    @media screen and (min-width: 25rem) {
+      max-width: 42rem;
+
+      input {
+        flex: 3;
+      }
+
+      select {
+        flex: 2;
+      }
     }
 
     input,
